--- a/backend/elastic/Dockerfile
+++ b/backend/elastic/Dockerfile
@@ -4,5 +4,6 @@ LABEL maintainer="gooppe"
 ENV indexer.threads=4
 
 COPY . /elastic-import/
+COPY elasticsearch.yml /usr/share/elasticsearch/config/
 WORKDIR /elastic-import
 RUN pip install -r requirements.txt
