--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - cluster.name=docker-cluster
       - discovery.type=single-node
       - "ES_JAVA_OPTS=-Xms512M -Xmx512M"
+      - http.cors.enabled=true
+      - http.cors.allow-origin=*
     volumes:
       - esdata:/usr/share/elasticsearch/data
     networks:
