--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - elasticsearch
     networks:
       - esnet
-    command: export FLASK_APP=ner_server.py && flask run
+    command: env FLASK_APP=ner_server.py flask run
     volumes:
       - ./data:/ner/data
     ports:
