--- a/backend/ner/Dockerfile
+++ b/backend/ner/Dockerfile
@@ -15,5 +15,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY . /ner
 WORKDIR /ner
 
+EXPOSE 9301
+
 RUN pip3 install --upgrade pip
 RUN pip3 install --trusted-host pypi.python.org -r requirements.txt
