--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,30 @@ services:
     ports:
       - 9200:9200
 
+  indexer:
+    build: ./backend/elastic
+    container_name: elastic-indexer
+    depends_on:
+      - elasticsearch
+    networks:
+      - esnet
+    command: python importer.py --host elasticsearch --local ./backend/data --offline 64
+    volumes:
+      - ./backend/data:/elastic-import/data
+
+  ner:
+      build: ./backend/ner
+      container_name: ner
+      depends_on:
+        - elasticsearch
+      command: gunicorn --timeout 200 --workers 3 -b 0.0.0.0:9301 ner_server:app
+      volumes:
+        # ¯\_(ツ)_/¯
+        - ./backend/data:/data # ¯\_(ツ)_/¯
+        # ¯\_(ツ)_/¯
+      ports:
+        - 9301:9301
+
   webapp:
     container_name: webapp
     build: ./webapp
@@ -24,17 +48,6 @@ services:
     - esnet
     ports:
     - 3000:80
-  # indexer:
-  #   build: ./elastic
-  #   container_name: elastic-indexer
-  #   environment:
-  #     - indexer.threads=32
-  #   depends_on:
-  #     - elasticsearch
-  #   networks:
-  #     - esnet
-  #   command: sh -c 'python importer.py 64'
-
 
 volumes:
   esdata:
